@@ -2275,6 +2275,17 @@
       </component>
     </version>
   </module>
+  <module name="regexxer">
+    <version release="gnome-2.8">
+      <component name="regexxer" dir="regexxer" group="extras">
+	<podir dir="po"/>
+	<potname name="regexxer.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="rhythmbox">
     <version release="gnome-2.8">
       <component name="rhythmbox" dir="rhythmbox" group="extras">
