@@ -1,3 +1,7 @@
+2004-05-17  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: regexxer has been added.
+
 2004-05-16  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-applets been branched.
